fix layout shifts for smaller screens

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,7 +19,7 @@
   --secondary-foreground: oklch(0.9 0.02 87.16);
   --muted: oklch(0.68 0.04 170.9);
   --muted-foreground: oklch(0.27 0.01 88.77);
-  --accent: oklch(0.23 0.09 15.68);
+  --accent: oklch(0.25 0.15 20);
   --accent-foreground: oklch(0.97 0.01 85.47);
   --destructive: oklch(0.58 0.24 28.82);
   --destructive-foreground: oklch(0.58 0.24 28.82);
